# KTailctl

./: .clang-format  .clang-tidy  .cmake.yaml  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamlfmt.yaml  .yamllint.yml  CMakeLists.txt  KTailctl.notifyrc  README.md  TODO.md  class-hierarchy.mmd  craft-dependencies.txt  default.nix  devenv.nix  devenv.yaml  flake.nix  flatpak-local-exceptions.json  generate-icons.py  ktailctl.notifyrc  org.fkoehler.KTailctl.desktop  org.fkoehler.KTailctl.desktop.in  org.fkoehler.KTailctl.metainfo.xml  org.fkoehler.KTailctl.yml  org.fkoehler.ktailctl.desktop.in  org.fkoehler.ktailctl.metainfo.xml  org.fkoehler.tailctl.desktop  org.fkoehler.tailctl.json  org.fkoehler.tailctl.metainfo.xml  org.kde.tailctl.desktop  org.kde.tailctl.json  org.kde.tailctl.metainfo.xml  pyproject.toml  renovate.json  shell.nix  tailctl.notifyrc  vendor-ktailctl-helper.sh  vendor-tailscale.sh  (+2 more)
ktailctl-helper/: .gitignore  CMakeLists.txt  go.mod  go.sum  ktailctl-helper.go
lib/: build.sh  (+2 more)
new_src/Go/: CMakeLists.txt  go.mod  go.sum  logging.cpp  logging.go  logging.go.in  logging.h  settings.go
new_src/LocalClients/: CMakeLists.txt
new_src/Networks/: CMakeLists.txt  TailscaleNetwork.cpp
new_src/Nodes/: CMakeLists.txt  Location.cpp  NodeProperties.cpp  TailscaleNetworkNode.cpp  TailscaleNodeProperties.cpp
src/: CMakeLists.txt  CountryFlags.cmake  CountryFlags.cmake.j2  about.cpp  about.h  about.hpp  account_data.cpp  account_data.hpp  account_model.cpp  account_model.hpp  app.cpp  app.h  app.hpp  download-flags.py  exit_node_model.cpp  exit_node_model.h  exit_node_model.hpp  freedesktop_settings_portal.cpp  freedesktop_settings_portal.hpp  icon_theme_model.cpp  icon_theme_model.h  json.cpp  json.h  ktailctlconfig.kcfg  ktailctlconfig.kcfgc  location.cpp  location.h  location_data.cpp  location_data.h  logging.cpp  logging.h  logging.hpp  main.cpp  mullvad_country_model.cpp  mullvad_country_model.hpp  mullvad_node_model.cpp  notifier.cpp  notifier.h  org.fkoehler.tailctl.actions  org.freedesktop.portal.Settings.xml  (+61 more)
src/Components/: CMakeLists.txt  FormCopyChipsDelegate.qml  FormCopyLabelDelegate.qml  FormLabelDelegate.qml  FormLabeledIconDelegate.qml  PeerInfo.qml  componentsplugin.cpp
src/common/: CMakeLists.txt  location.h  peer.cpp  peer.h  status.cpp  status.h
src/components_plugin/: CMakeLists.txt  FormCopyChipsDelegate.qml  FormCopyLabelDelegate.qml  FormLabelDelegate.qml  FormLabeledIconDelegate.qml  HeaderBanner.qml  PeerInfo.qml  PeerInfoPage.qml  components_plugin.cpp
src/config/: CMakeLists.txt  config_auto_save.cpp  config_auto_save.hpp  ktailctl_config.kcfg  ktailctlconfig.kcfg  preferences.cpp  preferences.h  preferences.hpp  themes.hpp
src/contents/: .gitignore  CMakeLists.txt  generate_resource.py
src/contents/country-flags/: requirements.txt
src/contents/ui/: About.qml  ExitNodes.qml  Peer.qml  Peers.qml  Self.qml  Settings.qml  Statistics.qml  main.qml
src/country-flags/: country-flags.qrc  download.py
src/data/: CMakeLists.txt  json.h  json.hpp  location_data.h  peer_data.cpp  peer_data.h  peer_data.hpp  status_data.cpp  status_data.h  status_data.hpp
src/icons/: CMakeLists.txt  icons.qrc
src/icons/country-flags/: CMakeLists.txt  LICENSE
src/icons/tray-icons/: CMakeLists.txt  online.svg.in  (+1 more)
src/json/: CMakeLists.txt  Cargo.toml
src/models/: CMakeLists.txt  peer_model.h
src/qml/: Peer.qml
src/statistics/: CMakeLists.txt  statistics_model.cpp  statistics_model.hpp
src/taildrop/: CMakeLists.txt  taildrop_receiver.cpp  taildrop_receiver.h  taildrop_receiver.hpp  taildrop_send_job.cpp  taildrop_send_job.h  taildrop_send_job.hpp  taildrop_sender.cpp  taildrop_sender.h  taildrop_sender.hpp
src/tailscale/: CMakeLists.txt  exit_node_model.cpp  exit_node_model.h  location.cpp  location.h  mullvad_country_model.cpp  mullvad_country_model.h  mullvad_node_model.cpp  mullvad_node_model.h  mullvad_node_model.hpp  peer.cpp  peer.h  peer_model.cpp  peer_model.h  peer_model.hpp  tailscale.cpp  tailscale.h  tailscale.hpp
src/tray_icon/: CMakeLists.txt  tray_icon.cpp  tray_icon.hpp  tray_menu_accounts.cpp  tray_menu_accounts.hpp  tray_menu_exit_nodes.cpp  tray_menu_exit_nodes.hpp  tray_menu_mullvad_exit_nodes.cpp  tray_menu_mullvad_exit_nodes.hpp  tray_menu_peers.cpp  tray_menu_peers.hpp  tray_menu_self.cpp  tray_menu_self.hpp  tray_menu_self_hosted_exit_nodes.cpp  tray_menu_self_hosted_exit_nodes.hpp
src/ui/: About.qml  Accounts.qml  CMakeLists.txt  ExitNodes.qml  Main.qml  MullvadNodes.qml  Peer.qml  Peers.qml  Self.qml  Settings.qml  Statistics.qml  TrayMenu.qml  main.qml  ui.qrc
src/util/: CMakeLists.txt  util.cpp  util.h  util.hpp
src/wrapper/: .gitignore  CMakeLists.txt  go.mod  go.sum  logging.cpp  logging.go.in  options.go  wrapper.go
src_new/: CMakeLists.txt  main.cpp  peer.hpp  property_list_model.hpp  tailscale.hpp  util.hpp
src_new/config/: ktailctl_config.kcfg
src_new/icons/: CMakeLists.txt  icons.qrc
src_new/tailscale/: CMakeLists.txt  tailscale.hpp
src_new/tray_icon/: CMakeLists.txt  tray_icon.hpp  tray_menu_accounts.hpp  tray_menu_exit_nodes.cpp  tray_menu_exit_nodes.hpp  tray_menu_mullvad_exit_nodes.cpp  tray_menu_mullvad_exit_nodes.hpp  tray_menu_peers.cpp  tray_menu_peers.hpp  tray_menu_self.hpp  tray_menu_self_hosted_exit_nodes.cpp  tray_menu_self_hosted_exit_nodes.hpp
src_new/ui/: CMakeLists.txt  Main.qml  PagePeerList.qml  ui.qrc
tailctlpp/: .gitignore  CMakeLists.txt  callbacks.go  go.mod  go.sum  logging.cpp  logging.go  logging.go.in  logging.h  logging_test.c  options.go  tailctlpp.go  taildrop.go
tailwrap/: .gitignore  CMakeLists.txt  go.mod  go.sum  logging.cpp  logging.go  logging.go.in  logging.h  options.go  taildrop.go  tailwrap.go
tailwrap/logging/: CMakeLists.txt  go.mod  logging.cpp  logging.go  logging.go.in  logging.h
tests/: CMakeLists.txt  lsan.supp  test_data.cpp  test_data.h  test_data.hpp  test_mullvad_country_model.cpp  test_property_list_model.cpp
tests/tailscale/: CMakeLists.txt
tests/util/: CMakeLists.txt  test_format_duration_human_readable.cpp
(+240 files in other folders)
