[project]
name = "ktailctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.39.3",
    "jinja2>=3.1.5",
    "pycountry>=26.2.16",
    "rich>=15.0.0",
    "ruff>=0.15.12",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
