[project]
name = "ktailctl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.39.9",
    "jinja2>=3.1.5",
    "pycountry>=26.2.16",
    "rich>=15.0.0",
    "ruamel-yaml>=0.19.1",
    "ruff>=0.15.20",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
